--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="row">
       <div class="col-lg-12">
         <form id="contactForm"
-          action="https://formspree.io/nick@pattersonpower.net"
+          action="https://formspree.io/f/maykddpd"
           novalidate="novalidate" method="POST">
           <!--name="sentMessage"-->
           <div class="row">
