--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="col-lg-12">
         <form id="contactForm"
           action="https://formspree.io/f/maykddpd"
-          novalidate="novalidate" method="POST">
+          method="POST">
           <!--name="sentMessage"-->
           <div class="row">
             <div class="col-md-6">
